name: haskell-openzwave-cpp
version: 0.1.0
license: LGPL-3
license-file:        LICENSE
author: Stephen Elliott <steve@steellworks.com>
maintainer: Stephen Elliott <steve@steellworks.com>
copyright: Copyright 2017 Stephen Elliott
build-type: Custom
cabal-version: >=1.10

-- custom-setup
--   setup-depends:   base
--                  , haskell-openzwave-gen
--                  , hoppy-runtime

library
  hs-source-dirs:      src
  exposed-modules:
      OpenZWave.Internal.EmptyCpp
  build-depends:
      base
    , haskell-openzwave-gen
    , hoppy-runtime
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
    -- -pgmlg++
  --c-sources:           cpp/gen_ozw.cpp
  --                   , cpp/gen_ozw.hpp
  --                   , cpp/std.cpp
  --                   , cpp/std.hpp
  -- include-dirs:        cpp
  if os(darwin)
    extra-libraries:   c++
                     , openzwave
  else
    extra-libraries:   stdc++
                     , openzwave
  -- cc-options:          -fPIC
