name:                haskell-openzwave-gen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-openzwave-gen#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

-- This library component is here so that the C++ and Haskell gateway packages
-- can build-depends on it.  Really, the gateway packages should setup-depends
-- on the generator, but this is a new feature in Cabal 1.24 and some distros
-- still aren't shipping it yet.
library
  hs-source-dirs:      src
  other-modules:
    OpenZWave.Internal.EmptyGenerator
  build-depends:       base
  default-language:    Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind


executable haskell-openzwave-gen
  hs-source-dirs:      src-exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hoppy-generator >= 0.3
                     , hoppy-std >= 0.3
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
